# WaveFunctionCollapse

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
benches/: landscape.rs
examples/: image.rs  landscape.rs  perlin.rs  sparse.rs  sudoku.rs  warehouse.rs  zebra_puzzle.rs
src/: lib.rs  wave_function.rs
src/abstractions/: mod.rs  priority_web.rs  proximity_graph.rs
src/wave_function/: collapsable_wave_function.rs  indexed_view.rs  probability_collection.rs  probability_container.rs  probability_tree.rs  tests.rs
src/wave_function/collapsable_wave_function/: accommodating_collapsable_wave_function.rs  accommodating_sequential_collapsable_wave_function.rs  collapsable_wave_function.rs  entropic_collapsable_wave_function.rs  sequential_adjacent_collapsable_wave_function.rs  sequential_collapsable_wave_function.rs
wave-function-collapse/: Cargo.toml  crates.io_README.md
wave-function-collapse-api/: Cargo.toml  config.toml
wave-function-collapse-api/src/: main.rs  wave_function.rs
wave-function-collapse-api/src/wave_function/: indexed_view.rs  mapped_view.rs
wave-function-collapse/examples/: image.rs  landscape.rs  level.rs  oriented_tetris.rs  sparse.rs  sudoku.rs  tetris.rs  zebra_puzzle.rs
wave-function-collapse/src/: main.rs  wave_function.rs
wave-function-collapse/src/wave_function/: collapsable_wave_function.rs  indexed_view.rs  mapped_view.rs  probability_collection.rs  probability_container.rs  probability_tree.rs  tests.rs
wave-function-collapse/src/wave_function/collapsable_wave_function/: accommodating_collapsable_wave_function.rs  accommodating_sequential_collapsable_wave_function.rs  collapsable_wave_function.rs  deterministic_collapsable_wave_function.rs  entropic_collapsable_wave_function.rs  random_collapsable_wave_function.rs  sequential_collapsable_wave_function.rs  spreading_collapsable_wave_function.rs
