[package]
name = "wave-function-collapse-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.16.0"
async-std = { version = "1.8.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dyn-clone = "1.0.9"
rand = { version = "0.8.5", features = ["default"] }
rand_chacha = "0.3.1"
bitvec = { version = "1.0.1" }
uuid = { version = "1.2.1", features = ["v4"] }