[package]
name = "wave-function-collapse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.88"
dyn-clone = "1.0.9"
rand = { version = "0.8.5", features = ["default"] }
rand_chacha = "0.3.1"
bitvec = { version = "1.0.1" }
uuid = { version = "1.2.2", features = ["v4"] }
log = { version = "0.4.17" }
pretty_env_logger = { version = "0.4.0" }
string-builder = { version = "0.2.0" }
ordered-float = { version = "3.4.0" }
permutation = { version = "0.4.1" }

[dev-dependencies]
tempfile = { version = "3.3.0" }
colored = { version = "2.0.0" }