[package]
name = "wave-function-collapse"
version = "0.1.2"
edition = "2021"
authors = ["Austin Heller"]
description = "Converts nodes and their restrictions into a collapsed node state based on the selected algorithm."
readme = "crates.io_README.md"
repository = "https://github.com/AustinHellerRepo/WaveFunctionCollapse"
license = "MIT OR Apache-2.0"
keywords = ["wave-function", "generation", "procedural", "constraint", "wfc"]
categories = ["algorithms", "data-structures", "game-development"]

[dependencies]
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.88"
rand = { version = "0.8.5", features = ["default"] }
rand_chacha = "0.3.1"
bitvec = { version = "1.0.1" }
uuid = { version = "1.2.2", features = ["v4"] }
log = { version = "0.4.17" }
pretty_env_logger = { version = "0.4.0" }
ordered-float = { version = "3.4.0" }
permutation = { version = "0.4.1" }
indexmap = { version = "1.9.2" }

[dev-dependencies]
tempfile = { version = "3.3.0" }
colored = { version = "2.0.0" }
image = { version = "0.24.5" }
base64 = { version = "0.13.1" }